--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@protobufjs/base64": "^1.1.2",
     "@tauri-apps/api": "^1.5.1",
     "axios": "^1.6.0",
     "axios-tauri-api-adapter": "^0.2.0",
@@ -21,6 +22,7 @@
     "pako": "^2.1.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
+    "protobufjs": "^7.2.5",
     "qrcode": "^1.5.3",
     "qs": "^6.11.2",
     "tauri-plugin-websocket-api": "github:tauri-apps/tauri-plugin-websocket#v1",
