--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ futures-channel = "0.3.29"
 futures-util = "0.3.29"
 tungstenite = "0.20.1"
 tokio-tungstenite = "0.20.1"
+uuid = "1.5.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
