--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "qs": "^6.11.2",
     "tauri-plugin-websocket-api": "github:tauri-apps/tauri-plugin-websocket#v1",
     "vue": "^3.3.7",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-tiny-virtual-list": "^1.3.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.41.4",
