--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bili-message"
-version = "1.2.2"
+version = "1.2.3"
 description = "bilibili弹幕机"
 authors = ["半糖人类"]
 license = "MIT"
@@ -13,11 +13,19 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = [ "shell-open", "clipboard-write-text", "window-start-dragging", "window-set-always-on-top", "http-all", "macos-private-api", "system-tray"] }
+tauri = { version = "1.4", features = [
+  "shell-open",
+  "clipboard-write-text",
+  "window-start-dragging",
+  "window-set-always-on-top",
+  "http-all",
+  "macos-private-api",
+  "system-tray",
+] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tauri-plugin-localhost = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
-tokio = {version = "1.34.0" }
+tokio = { version = "1.34.0" }
 futures-channel = "0.3.29"
 futures-util = "0.3.29"
 tungstenite = "0.20.1"
