--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@protobufjs/base64": "^1.1.2",
     "@tauri-apps/api": "^1.5.1",
+    "@vueuse/core": "^10.7.2",
     "axios": "^1.6.0",
     "axios-tauri-api-adapter": "^0.2.0",
     "element-plus": "^2.4.1",
