--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.0",
     "axios-tauri-api-adapter": "^0.2.0",
     "element-plus": "^2.4.1",
+    "howler": "^2.2.4",
     "nanoid": "^5.0.2",
     "pako": "^2.1.0",
     "pinia": "^2.1.7",
@@ -35,6 +36,7 @@
     "@antfu/eslint-config": "^0.41.4",
     "@iconify-json/carbon": "^1.1.21",
     "@tauri-apps/cli": "^1.5.6",
+    "@types/howler": "^2.2.11",
     "@types/node": "^20.8.10",
     "@types/pako": "^2.0.2",
     "@types/qrcode": "^1.5.4",
