--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,9 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = [ "window-show", "window-create",
+tauri = { version = "1.4", features = [
+  "window-show",
+  "window-create",
   "shell-open",
   "clipboard-write-text",
   "window-start-dragging",
@@ -28,9 +30,10 @@ tauri-plugin-localhost = { git = "https://github.com/tauri-apps/plugins-workspac
 tokio = { version = "1.34.0" }
 futures-channel = "0.3.29"
 futures-util = "0.3.29"
-tungstenite = "0.20.1"
-tokio-tungstenite = "0.20.1"
+tungstenite = "0.21.0"
+tokio-tungstenite = "0.21.0"
 uuid = "1.5.0"
+tauri-plugin-context-menu = { git = "https://github.com/c2r0b/tauri-plugin-context-menu", branch = "main" }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
