--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@applemusic-like-lyrics/core": "^0.1.3",
     "@protobufjs/base64": "^1.1.2",
     "@tauri-apps/api": "^1.5.1",
     "@vueuse/core": "^10.7.2",
