--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "colorthief": "^2.4.0",
     "element-plus": "^2.4.1",
     "howler": "^2.2.4",
+    "md5": "^2.3.0",
     "nanoid": "^5.0.2",
     "pako": "^2.1.0",
     "pinia": "^2.1.7",
@@ -40,6 +41,7 @@
     "@iconify-json/carbon": "^1.1.21",
     "@tauri-apps/cli": "^1.5.6",
     "@types/howler": "^2.2.11",
+    "@types/md5": "^2.3.5",
     "@types/node": "^20.8.10",
     "@types/pako": "^2.0.2",
     "@types/qrcode": "^1.5.4",
