--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.2.6"
 description = "bilibili弹幕机"
 authors = ["半糖人类"]
 license = "MIT"
-repository = ""
+repository = "https://github.com/orangelckc/bili-message"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -14,6 +14,7 @@ tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
 tauri = { version = "1.4", features = [
+  "updater",
   "fs-write-file",
   "window-show",
   "window-create",
