--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@applemusic-like-lyrics/core": "^0.1.3",
     "@protobufjs/base64": "^1.1.2",
     "@tauri-apps/api": "^1.5.3",
+    "@types/cheerio": "^0.22.35",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
     "axios-tauri-api-adapter": "^0.2.1",
+    "cheerio": "1.0.0-rc.12",
+    "chinese-simple2traditional": "^2.2.1",
     "colorthief": "^2.4.0",
     "dompurify": "^3.1.0",
     "element-plus": "^2.7.0",
